src/App.scss
.textInput {
  width: 100%;
  height: 100%;
  display: block;
  border: none;
  outline: none;
  resize: none;
  opacity: 0;
}

.textDisplay {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  font-size: 2rem;
  color: #888;
  max-width: 60rem;
  padding: 2rem;
  pointer-events: none;
  font-family: menlo, monospace;
  margin: 0 auto;
  white-space: pre-line;
}

.char {
  position: relative;
  margin: 0.5rem 1px;
}

.charCursor {
  color: #666;

  &::before {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: -1;
    background: #eee;
  }
}

.charSuccess {
  color: #000;
  animation: 2s greenToBlack;
}

.charError {
  color: #fff;
  background: #ff0000;
}

@keyframes greenToBlack {
  0% { color: #42f486; }
  100% { color: #000; }
}

